deploy/kubernetes/overlays/nonprod/image-pull-policy-patch.yaml
# Image pull policy patch for all services
# NOTE: We intentionally avoid imagePullPolicy: Always here because it causes repeated
# pulls (and makes Docker Hub rate limits much more likely). Use IfNotPresent.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-logs
  namespace: logwise
spec:
  template:
    spec:
      containers:
      - name: vector
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
  namespace: logwise
spec:
  template:
    spec:
      containers:
      - name: orchestrator
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: logwise
spec:
  template:
    spec:
      containers:
      - name: spark-master
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: logwise
spec:
  template:
    spec:
      containers:
      - name: spark-worker
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-dummy
  namespace: logwise
spec:
  template:
    spec:
      containers:
      - name: healthcheck-dummy
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: logwise
spec:
  template:
    spec:
      containers:
      - name: kafka
        imagePullPolicy: IfNotPresent
        image: confluentinc/cp-kafka:7.6.0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana-mysql
  namespace: logwise
spec:
  template:
    spec:
      containers:
      - name: mysql
        imagePullPolicy: IfNotPresent
        image: mysql:8.0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orch-mysql
  namespace: logwise
spec:
  template:
    spec:
      containers:
      - name: mysql
        imagePullPolicy: IfNotPresent
        image: mysql:8.0
